added some comments to the javascript, changed 'off' color style to #555

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 span { 
 	text-transform: uppercase;
 	font-family: 'Josefin Sans', sans-serif;
-	color : #ACA996;
+	color : #555;
 	display : inline-block;
 	letter-spacing : 1px;
 }
