Convert WordClock to class with private fns

--- a/index.html
+++ b/index.html
@@ -40,10 +40,9 @@ span {
 
 </head>
 <body>
-<script src="js/wordclock.js"> </script>
+<script src="js/WordClock.js"> </script>
 <script>
 	var wc = new WordClock();
-	wc.draw();
 </script>
 </body>
 </html>
